--- a/assignments/A06/dungeon_07/index.html
+++ b/assignments/A06/dungeon_07/index.html
@@ -15,6 +15,7 @@
 	<script src='js/level_04.js'></script>
 	<script src='js/level_05.js'></script>
 	<script src='js/game.js'></script>
+	<script src='js/hud.js'></script>
 	<script src="js/HealthBar.standalone.js"></script>
 
 	<style type="text/css">
