--- a/assignments/A07/lesson_04_v2/public/index.html
+++ b/assignments/A07/lesson_04_v2/public/index.html
@@ -28,6 +28,7 @@
 	<script type="text/javascript" src='js/gameover.js'></script>
 	<script type="text/javascript" src='js/ufo.js'></script>
 	<script type="text/javascript" src='js/game.js'></script>
+	<script src="js/HealthBar.standalone.js"></script>
 
 </body>
 
