--- a/assignments/A07/lesson_04_v2/public/index.html
+++ b/assignments/A07/lesson_04_v2/public/index.html
@@ -26,6 +26,7 @@
 	<script type="text/javascript" src='js/mainmenu.js'></script>
 	<script type="text/javascript" src='js/destroyer.js'></script>
 	<script type="text/javascript" src='js/gameover.js'></script>
+	<script type="text/javascript" src='js/gameover2.js'></script>
 	<script type="text/javascript" src='js/ufo.js'></script>
 	<script type="text/javascript" src='js/game.js'></script>
 	<script src="js/HealthBar.standalone.js"></script>
